# py-sqlite3-adapter

./: database.py  main.py  my_database.db  pyproject.toml  readme.md
sqlbuilder/: get.py  insert.py  set.py  sqlbuilder.py  table.py  where.py
